creation des roles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#16A34A" />
     <meta name="description" content="PWA de gestion de ferme avicole et provenderie pour coopérative" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Ferme Coopérative - Gestion Avicole</title>
+    <title>Goshen Farms - Gestion centralisée</title>
   </head>
   <body>
     <div id="root"></div>
